--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,11 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 14pt;
     box-sizing: border-box;
 }
 
 /* Accent color */
-h2 {
+h2, .transaction-total {
     color: rgb(21, 133, 99);
 }
 
@@ -29,6 +30,7 @@ html, body, #root {
 
 #root {
     background-color: rgb(173, 212, 179);
+    overflow: hidden;
 }
 
 input {
@@ -39,6 +41,10 @@ input {
     padding: 5px;
 }
 
+.align-right {
+    float: right;
+}
+/* Login & Signup Pages */
 .container-login, .container-signup {
     position: relative;
     display: block;
@@ -74,7 +80,40 @@ input {
 }
 
 .sidebar {
-    border: 1px solid black;
+    border-right: 1px solid black;
     height: 100%;
-    width: 10%;
+    width: 15%;
+}
+
+.container-transactions {
+    padding: 10px 10px 0 10px;
+    width: 85%;
+    background-color: white;
+}
+
+.container-transactions ul {
+    overflow-y: auto;
+    height: calc(100vh - 100px); 
+}
+
+.container-transactions li {
+    height: 5%;
+    padding: 10px;
+}
+
+.container-transactions li div {
+    height: 100%;
+}
+
+.transaction-amount {
+    display: inline-block;
+    font-size: 1.1em;
+    font-weight: bold;
+    margin-right: 3%;
+    width: 4em;
+}
+
+.transaction-total {
+    font-size: 100pt;
+    font-weight: bold;
 }
