--- a/client/src/meyer_reset.css
+++ b/client/src/meyer_reset.css
@@ -19,7 +19,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-    font-size: 100%;
+    font-size: 14pt;
     font-weight: normal;
     font-family: Arial, Helvetica, sans-serif; 
 	vertical-align: middle;
