--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,10 @@ a {
     text-decoration: none;
 }
 
+.hidden {
+    visibility: hidden;
+}
+
 a, a:visited {
     color: rgb(97, 97, 203);
 }
@@ -33,16 +37,20 @@ html, body, #root {
     overflow: hidden;
 }
 
-input {
+input, button {
     font-size: 14pt;
     border-radius: 4px;
     border: 1px solid grey;
     padding: 5px;
+    transition: all 0.1s;
+}
+
+input[type="submit"]:active, button:active{
+    background-color: darkgray;
 }
 
 .form-auth input {
-    margin: 10px auto 10px auto;
-    
+    margin: 10px auto 10px auto;   
 }
 
 .align-right {
@@ -106,6 +114,8 @@ input {
 }
 
 .container-transactions li div {
+    display: flex;
+    align-items: center;
     height: 100%;
     padding: 5px;
     border-top: 1px solid lightgrey;
