--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,7 @@ input, button {
     border: 1px solid grey;
     padding: 5px;
     transition: all 0.1s;
+    margin: 3px;
 }
 
 input[type="submit"]:active, button:active{
@@ -147,7 +148,8 @@ input[type="submit"]:active, button:active{
 
 .transaction-total {
     font-size: 100pt;
-    font-weight: bold;
+    font-weight: 900;
+    font-family: 'Roboto', sans-serif;
 }
 
 .form-new-transaction {
