--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,13 +90,17 @@ input[type="submit"]:active, button:active{
     display: grid;
     height: 100%;
 
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 60px 2fr;
     grid-template-columns: 1fr 7fr;
 }
 
 .header-main {
     grid-column-start: 1;
     grid-column-end: 3;
+    z-index: 2;
+
+    height: auto;
+    padding: 10px;
 
     background-color: white;
     -webkit-box-shadow: 0px 3px 14px 0px rgba(0,0,0,0.32);
@@ -104,74 +108,19 @@ input[type="submit"]:active, button:active{
     box-shadow: 0px 3px 14px 0px rgba(0,0,0,0.32)
 }
 
+.wrapper-content {
+    background-color: white;
+    padding: 20px 10px 0 10px;
+
+}
+
 .logo {
     font-size: 36px;
     display: inline-block;
 }
 
-.sidebar {
-    height: 100%;
-    /* width: 15%; */
-    padding: 5% 5% 5% 5%;
-}
-
-
-.container-transactions {
-    padding: 10px 10px 0 10px;
-    /* width: 85%; */
-    background-color: white;
-}
-
-.container-transactions ul {
-    overflow-y: auto;
-    height: calc(100vh - 100px); 
-}
-
-.container-transactions li {
-    height: 7%;
-    box-sizing: border-box;
-}
-
-.container-transactions li div {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    padding: 5px;
-    border-top: 1px solid lightgrey;
-    border-bottom: 1px solid lightgrey;
-}
-
-.container-transactions li div:hover {
-    background-color: lightgrey;
-}
-
-.transaction-amount, .transaction-title, .transaction-date {
-    display: inline-block;
-}
-
-.transaction-amount {
-    font-size: 1.1em;
-    font-weight: bold;
-    margin-right: 5px;
-    width: 10%;
-}
-
 .form-time-filter {
     margin-right: 5%;
-}
-
-.transaction-title {
-    width: 60%;
-}
-
-.transaction-date {
-    width: 10%;
-}
-
-.transaction-total {
-    font-size: 100pt;
-    font-weight: 900;
-    font-family: 'Roboto', sans-serif;
 }
 
 .form-new-transaction {
